# OOP-CPP-Laboratory_6

./: CMakeLists.txt  README.md  main.cpp  materials.md  test_main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: bear.h  bittern.h  combat_visitor.h  desman.h  visitor.h
src/: bear.cpp  bittern.cpp  combat_visitor.cpp  desman.cpp  factory.cpp
tests/: test_arena.cpp  test_combat.cpp  test_data_npcs.txt  test_factory.cpp  test_file_loading.cpp  test_npc.cpp
